--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name:  com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.1.107:3306/201808?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/201808?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: 123
   devtools:
@@ -43,35 +43,6 @@ spring:
 
 
 
-#server:
-#  port: 8080
-#
-#
-#spring:
-#  datasource:
-#    driver-class-name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://127.0.0.1:3306/lin?useUnicode=true&characterEncoding=UTF-8
-#    username: root
-#    password: 123
-#
-#  mvc:
-#    view:
-#      prefix: /WEB-INF/jsp/
-#      suffix: .jsp
-#
-#
-#  redis:
-#    host: 127.0.0.1
-#    port: 6379
-#    jedis:
-#      pool:
-#        max-idle: 300
-#        max-active: 600
-#        max-wait: 300
-#  data:
-#    mongodb:
-#      host: 127.0.0.1
-#      port: 27017
-#      database: 1801a
+
 
 
